add_library(
        a1lua STATIC
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_script.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_map.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_monsters.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_objects.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_player.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_projectiles.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_saved_objects.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lapi.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lauxlib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lbaselib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lbitlib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lcode.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lctype.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ldblib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ldebug.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ldo.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ldump.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lfunc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lgc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/linit.c
        ${CMAKE_CURRENT_SOURCE_DIR}/liolib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/llex.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lmathlib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lmem.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lobject.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lopcodes.c
        ${CMAKE_CURRENT_SOURCE_DIR}/loslib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lparser.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lstate.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lstring.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lstrlib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ltable.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ltablib.c
        ${CMAKE_CURRENT_SOURCE_DIR}/ltm.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lundump.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lvm.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lzio.c
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_serialize.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_hud_objects.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/lua_hud_script.cpp
)